--- a/alire.toml
+++ b/alire.toml
@@ -4,10 +4,11 @@ version = "1.0.0"
 licenses = "BSD-3-Clause"
 tags = ["embedded"]
 
-website = "https://github.com/wolfbiters/hal_embedded"
-authors = ["wolf biters"]
-maintainers = ["wolf biters <the.wolf.biters@gmail.com>"]
-maintainers-logins = ["wolfbiters"]
+website = "https://github.com/ohenley/hal_embedded"
+
+authors = ["AdaCore"]
+maintainers = ["olivier henley <olivier.henley@gmail.com>"]
+maintainers-logins = ["ohenley"]
 
 [[depends-on]]
 beta_types = "1.0.0"
